# Exoskeleton-Embedded

./: .gitignore  CMakeLists.txt  README.md  data_collection.cpp  filtered_differences.txt  model.pt
.github/workflows/: CI.yml  ci_pipeline.yml
MAY_10_FULL_SUIT_WORKING/control/: Makefile  exo_control_test  joint_data.json
MAY_10_FULL_SUIT_WORKING/control/FSM_general_controller/: .ActiveState.cpp.swp  ActiveState.cpp  IdleState.cpp  Sensor.h  State.cpp  State.h  Timer.h  main.cpp
MAY_10_FULL_SUIT_WORKING/control/IMU_DataLoader/: IMUDataLoader.cpp  IMUDataLoader.h
MAY_10_FULL_SUIT_WORKING/control/Joint_Estimator/: JointEstimator.cpp  JointEstimator.h
MAY_10_FULL_SUIT_WORKING/control/Testing/: log_output.csv  outputAnalysis.py
MAY_10_FULL_SUIT_WORKING/control/Torque_Controller/: TorqueController.cpp  TorqueController.h
MAY_10_FULL_SUIT_WORKING/main_controller/: CMakeLists.txt  full_suit_executable_right_side_negated  left_side_executable  main.cpp  main_controller
MAY_10_FULL_SUIT_WORKING/main_controller/torque_controller/: torqueController.cpp  torqueController.h
MAY_10_FULL_SUIT_WORKING/models/: model.h
MAY_10_FULL_SUIT_WORKING/motors/: motor_api.cpp  motor_api.h
MAY_10_FULL_SUIT_WORKING/sensors/: bno055.c  bno055.h  data_collection.cpp  data_collection.h  data_collection_test  imu_data.json  liveSensorData.cpp  liveSensorData.h  normalized.cpp  rpi_tca9548a.cpp  test  test_main
control/: Makefile  README.md  exo_control_test
control/FSM_general_controller/: ActiveState.cpp  ActiveState.h  ErrorState.cpp  ErrorState.h  IdleState.h  Sensor.cpp  StateParameters.cpp  StateParameters.h  Timer.cpp  main.cpp
control/Joint_Estimator/: JointEstimator.cpp  JointEstimator.h
control/Testing/: log_output.csv  outputAnalysis.py
control/Torque_Controller/: TorqueController.cpp  TorqueController.h
control/main_controller/: main.cpp
control/models/: Hip_Joint.slx
docs/: contributing.md  test-instructions.md
main_controller/: main.cpp
main_controller/clean_angles/: clean.h
main_controller/joint_estimator/: jointEstimator.h
main_controller/torque_controller/: torqueController.cpp  torqueController.h
models/: model.cpp
motors/: MotorControl.cpp  MotorControlTest.cpp  README.md  motor_api.cpp  motor_api.h
sensors/: README.md  data_collection.cpp  data_collection.h  driver.cpp  driver.h  driver_with_2sensors.cpp  driver_with_multiplexer.cpp  filtered_differences.txt  getSensorData.cpp  getSensorData.h  imu_filter.cpp  imu_filter_lpf.cpp  imu_logger.cpp  kalman_filter.cpp  kalman_filter.h  low_pass_filter.h  normalize_sensor_data.py  normalize_sensor_data_c++.cpp  one_d_kalman_filter.cpp  one_d_kalman_filter.h  sensor_preprocessing.cpp  sensor_preprocessing.h  vis_all.py  visdata.py
sensors/treadmill_imu_data/: filtered_imu_data.json  filtered_imu_data_lpf.json  imu_data_treadmill_4min_1.7mph.json  imu_data_treadmill_4min_1.9mph.json  imu_data_treadmill_5min_1.9mph.json
tests/: motor_api_test.cpp  sample_test.cpp
(+2 files in other folders)
